added signup link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="main-text">
                 <h1 class="main-header">MSS WebDev Club</h1>
                 <div class="main-desc-container">
-                    <a class="main-join-a" href="https://www.youtube.com" target="_blank">Join us</a> 
+                    <a class="main-join-a" href="http://bit.ly/msswebdev" target="_blank">Join us</a> 
                     <span class="main-desc">and develop websites together.</span>
                 </div>
             </div>
