--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                 <ul class="main-paragraph-list">
                     <li><p class="main-paragraph">Create manga reading website</p></li>
                 </ul>
-                
+            </div>
+            <div class="main-announce">
+                <h1 class="main-sub">Timeline</h1>
+                <ul class="main-paragraph-list">
+                    <li><p class="main-paragraph">Coming soon</p></li>
+                </ul>
             </div>
         </div>
     </div>
