--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                     <li><p class="main-paragraph">Coming soon</p></li>
                 </ul>
             </div>
+            <div class="main-announce">
+                <h1 class="main-sub">Announcement</h1>
+                <ul class="main-paragraph-list">
+                    <li><p class="main-paragraph">First meeting on September 26th</p></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
