--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div class="main-announce">
-                <h1 class="main-sub">Announcement</h1>
+                <h1 class="main-sub">Announcements</h1>
                 <ul class="main-paragraph-list">
                     <li><p class="main-paragraph">First meeting on September 26th</p></li>
                 </ul>
