--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="main-announce">
                 <h1 class="main-sub">Announcements</h1>
                 <ul class="main-paragraph-list">
-                    <li><p class="main-paragraph">First meeting on October 3rd</p></li>
+                    <li><p class="main-paragraph">First meeting on October 3rd in room 204 after school</p></li>
                 </ul>
             </div>
         </div>
