--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1 class="main-sub">Announcements</h1>
                 <ul class="main-paragraph-list">
                     <li><p class="main-paragraph">First meeting on October 3rd in room 204 after school</p></li>
-                     <li><p class="main-paragraph">If you have any questions, contact: williamyeung2002@hotmail.com</p></li>
+                     <li><p class="main-paragraph">If you have any questions, <br>contact: williamyeung2002@hotmail.com or jacksonus0204@gmail.com</p></li>
                 </ul>
             </div>
         </div>
