--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="main-announce">
                 <h1 class="main-sub">Objectives</h1>
                 <ul class="main-paragraph-list">
-                    <li><p class="main-paragraph">Create websites</p></li>
+                    <li><p class="main-paragraph">Create Image Board</p></li>
                 </ul>
             </div>
             <div class="main-announce">
